infra/modules/vpc/main.tf
resource "aws_vpc" "this" {
    cidr_block           = var.cidr_block
    enable_dns_support   = true
    enable_dns_hostnames = true

    tags = {
        Name = "${var.name}-vpc"
    }
}

resource "aws_internet_gateway" "this" {
    vpc_id = aws_vpc.this.id

    tags = {
        Name = "${var.name}-igw"
    }
}

# * Public Subnets
resource "aws_subnet" "public" {
    count                   = length(var.public_subnets)
    vpc_id                  = aws_vpc.this.id
    cidr_block              = var.public_subnets[count.index]
    availability_zone       = var.azs[count.index]
    map_public_ip_on_launch = true

    tags = {
        Name = "${var.name}-public-${count.index}"
        Tier = "public"
    }
}

# * Private Subnets
resource "aws_subnet" "private" {
    count             = length(var.private_subnets)
    vpc_id            = aws_vpc.this.id
    cidr_block        = var.private_subnets[count.index]
    availability_zone = var.azs[count.index]

    tags = {
        Name = "${var.name}-private-${count.index}"
        Tier = "private"
    }
}

# * Elastic IP for NAT
    resource "aws_eip" "nat" {
    domain = "vpc"

    tags = {
        Name = "${var.name}-nat-eip"
    }
}

# * NAT Gateway
resource "aws_nat_gateway" "nat" {
    # ! Each AZ should have a NAT gateway in critical production environment
    # ! One NAT gateway for all is an economical choice (NAT Gateway per AZ is expensive)
    subnet_id     = aws_subnet.public[0].id
    allocation_id = aws_eip.nat.id

    tags = {
        Name = "${var.name}-nat"
    }
}

# * Public Route Table
resource "aws_route_table" "public" {
    vpc_id = aws_vpc.this.id

    tags = {
        Name = "${var.name}-public-rt"
    }
}

resource "aws_route" "public" {
    route_table_id         = aws_route_table.public.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id             = aws_internet_gateway.this.id
}

resource "aws_route_table_association" "public" {
    count          = length(aws_subnet.public)
    route_table_id = aws_route_table.public.id
    subnet_id      = aws_subnet.public[count.index].id
}

# * Private Route Table
resource "aws_route_table" "private" {
    vpc_id = aws_vpc.this.id

    tags = {
        Name = "${var.name}-private-rt"
    }
}

resource "aws_route" "private_nat" {
    route_table_id         = aws_route_table.private.id
    destination_cidr_block = "0.0.0.0/0"
    nat_gateway_id         = aws_nat_gateway.nat.id
}

resource "aws_route_table_association" "private" {
    count          = length(aws_subnet.private)
    route_table_id = aws_route_table.private.id
    subnet_id      = aws_subnet.private[count.index].id
}
